Finished feature checkout