@@ -1,6 +1,8 @@
 package team.kucing.anabulshopcare.entity;
 import lombok.*;
 import org.hibernate.annotations.*;
+import team.kucing.anabulshopcare.dto.response.BuyerResponse;
+import team.kucing.anabulshopcare.dto.response.SellerResponse;
 import team.kucing.anabulshopcare.dto.response.UserResponse;
 import team.kucing.anabulshopcare.entity.image.ImageProduct;
 
@@ -10,6 +12,7 @@ import javax.persistence.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static java.lang.Boolean.FALSE;
 import static javax.persistence.FetchType.EAGER;
 
 @Getter
@@ -49,9 +52,10 @@ public class UserApp extends ImageProduct {
     @OneToMany
     private List<Cart> cart = new ArrayList<>();
 
-    private String history;
+    @OneToMany
+    private List<Checkout> history = new ArrayList<>();
 
-    private boolean isDeleted = Boolean.FALSE;
+    private boolean isDeleted = FALSE;
 
     @CreationTimestamp
     @Column(nullable = false, updatable = false)
@@ -70,9 +74,38 @@ public class UserApp extends ImageProduct {
                         this.address.getKota().getNama()+", " +
                         this.address.getKecamatan().getNama()+", " +
                         this.address.getKelurahan().getNama())
-                .history(this.history)
+                .history(this.history.stream().map(Checkout::convertToResponse).toList())
                 .wishlistProduct(this.wishlist.stream().map(Wishlist::convertToResponse).collect(Collectors.toList()))
-                .cartList(this.cart.stream().map(Cart::convertToResponse).collect(Collectors.toList()))
+                .cartList(this.cart.stream().filter(cart1 -> cart1.isCheckout()==FALSE).map(Cart::convertToResponse).toList())
+                .roles(this.roles).build();
+    }
+
+    public SellerResponse convertToSellerResponse(){
+        return SellerResponse.builder()
+                .firstName(this.firstName)
+                .lastName(this.lastName)
+                .email(this.email)
+                .phoneNumber(this.phoneNumber)
+                .address(this.address.getProvinsi().getNama()+", " +
+                        this.address.getKota().getNama()+", " +
+                        this.address.getKecamatan().getNama()+", " +
+                        this.address.getKelurahan().getNama())
+                .roles(this.roles).build();
+    }
+
+    public BuyerResponse convertToBuyerResponse(){
+        return BuyerResponse.builder()
+                .firstName(this.firstName)
+                .lastName(this.lastName)
+                .email(this.email)
+                .phoneNumber(this.phoneNumber)
+                .address(this.address.getProvinsi().getNama()+", " +
+                        this.address.getKota().getNama()+", " +
+                        this.address.getKecamatan().getNama()+", " +
+                        this.address.getKelurahan().getNama())
+                .history(this.history.stream().map(Checkout::convertToResponse).toList())
+                .wishlistProduct(this.wishlist.stream().map(Wishlist::convertToResponse).collect(Collectors.toList()))
+                .cartList(this.cart.stream().filter(cart1 -> cart1.isCheckout()==FALSE).map(Cart::convertToResponse).toList())
                 .roles(this.roles).build();
     }
 }
